--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "word-wrap": "^1.2.3",
     "wrappy": "^1.0.2",
     "yallist": "^4.0.0",
+    "yargs": "^17.6.0",
     "yocto-queue": "^0.1.0"
   }
 }
